--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ink = { version = "4.0.1", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+x509-signature = { version = "0.5.0"}
 
 [lib]
 name = "epassport"
@@ -22,3 +23,5 @@ crate-type = [
 default = ["std"]
 std = ["ink/std", "scale/std", "scale-info/std"]
 ink-as-dependency = []
+
+[env]
