--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ ink = { version = "4.0.1", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
-x509-signature = { version = "0.5.0"}
+barebones-x509 = { version = "0.5.0", default-features = false}
 
 [lib]
 name = "epassport"
